src/objects/Burden_Org_Hierarchy__c.object
<CustomObject>
    <fields>
        <fullName>Burden_Name_1__c</fullName>
        <label>Burden Name 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Burden_Name_2__c</fullName>
        <label>Burden Name 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Burden_Name__c</fullName>
        <label>Burden Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_ID__c</fullName>
        <externalId>true</externalId>
        <label>Organization ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_Organization_ID__c</fullName>
        <label>Parent Organization ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <label>Version Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Burden Org Hierarchy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Burden_Name__c</columns>
        <columns>Burden_Name_1__c</columns>
        <columns>Burden_Name_2__c</columns>
        <columns>Organization_ID__c</columns>
        <columns>Parent_Organization_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Burden Org Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Burden Org Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>